// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClinicalResult should pass certain props to Observation  1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={true}
        interpretation="CRITICAL"
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResult should render a commented result  1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
      <IconComment
        className="icon-comment"
        data-name="Layer 1"
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResult should render a default ClinicalResult 1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResult should render a modified result  1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
      <IconModified
        className="icon-modified"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResult should render a result with a concept display 1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
  </div>
  <div
    className="concept-display"
  >
    Temperature Oral
  </div>
</div>
`;

exports[`ClinicalResult should render a result with a date time display 1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
  </div>
  <div
    className="datetime-display"
  >
    Nov 23, 2019 13:31:31
  </div>
</div>
`;

exports[`ClinicalResult should render a result with unit hidden 1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResult should render a truncated ClinicalResult 1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display truncated"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResult should render a truncated ClinicalResult with icons moved 1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display truncated"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
    </div>
    <IconModified
      className="icon-modified"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</div>
`;

exports[`ClinicalResult should render an unverified result  1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111"
        hideUnit={false}
        isTruncated={false}
        result={
          Object {
            "unit": "mL",
            "value": "12345.678",
          }
        }
      />
      <IconDiamond
        className="icon-unverified"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Diastolic - should pass certain props to Observation  1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <ResultError
        key="Error-Systolic-111"
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.2"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={true}
        interpretation="CRITICAL"
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Diastolic - should render a commented result  1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <ResultError
        key="Error-Systolic-111"
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.2"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
      <IconComment
        className="icon-comment"
        data-name="Layer 1"
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Diastolic - should render a modified result  1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <ResultError
        key="Error-Systolic-111"
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.2"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
      <IconModified
        className="icon-modified"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Diastolic - should render a result with a concept display 1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <ResultError
        key="Error-Systolic-111"
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.2"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
    </div>
  </div>
  <div
    className="concept-display"
  >
    Temperature Oral
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Diastolic - should render a result with a date time display 1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <ResultError
        key="Error-Systolic-111"
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.2"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
    </div>
  </div>
  <div
    className="concept-display"
  >
    Nov 23, 2019 13:31:31
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Diastolic - should render a result with unit hidden 1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <ResultError
        key="Error-Systolic-111"
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.2"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Diastolic - should render an unverified result  1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <ResultError
        key="Error-Systolic-111"
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.2"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
      <IconDiamond
        className="icon-unverified"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Systolic - should pass certain props to Observation  1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={true}
        interpretation="CRITICAL"
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <ResultError
        key="Error-Diastolic-111"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Systolic - should render a commented result  1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <ResultError
        key="Error-Diastolic-111"
      />
      <IconComment
        className="icon-comment"
        data-name="Layer 1"
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Systolic - should render a modified result  1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <ResultError
        key="Error-Diastolic-111"
      />
      <IconModified
        className="icon-modified"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Systolic - should render a result with a concept display 1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <ResultError
        key="Error-Diastolic-111"
      />
    </div>
  </div>
  <div
    className="concept-display"
  >
    Temperature Oral
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Systolic - should render a result with a date time display 1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <ResultError
        key="Error-Diastolic-111"
      />
    </div>
  </div>
  <div
    className="concept-display"
  >
    Nov 23, 2019 13:31:31
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Systolic - should render a result with unit hidden 1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <ResultError
        key="Error-Diastolic-111"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure - Systolic - should render an unverified result  1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <ResultError
        key="Error-Diastolic-111"
      />
      <IconDiamond
        className="icon-unverified"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure should render a default ClinicalResultBloodPressure 1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={true}
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure should render a truncated ClinicalResultBloodPressure 1`] = `
<div
  className="clinical-result blood-pressure-result"
>
  <div
    className="decorated-result-display truncated"
  >
    <div
      className="result-display"
    >
      <Observation
        eventId="111.1"
        hideUnit={true}
        isTruncated={false}
        key="Observation-111.1"
        result={
          Object {
            "unit": "mmHg",
            "value": "180",
          }
        }
      />
      <span
        className="result-display-separator"
        key="ObservationSeperator-111.1"
      >
        /
      </span>
      <Observation
        eventId="111.2"
        hideUnit={false}
        isTruncated={false}
        key="Observation-111.2"
        result={
          Object {
            "unit": "mmHg",
            "value": "80",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ClinicalResultBloodPressure should render a truncated ClinicalResultBloodPressure with icons moved 1`] = `
<div
  className="clinical-result"
>
  <div
    className="decorated-result-display truncated"
  >
    <div
      className="result-display"
    >
      <Observation
        hideUnit={false}
        isTruncated={false}
        result={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`should render a default ResultTimeHeaderCell component 1`] = `
<div
  className="clinical-result-time-header-cell padding-compact"
>
  <div
    className="date"
  >
    Dec 21, 2010
  </div>
  <div
    className="time"
  >
    23:59
  </div>
</div>
`;

exports[`should render a default component 1`] = `
<div
  className="clinical-result-name-header-cell padding-compact"
>
  <div
    className="name"
  >
    Blood Pressure
  </div>
  <div
    className="unit"
  >
    mmHg
  </div>
</div>
`;
